2010-03-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use enum for keyword substitution mode.

	* rcsbase.h (kwsub): New enum.
	[O_BINARY] (FOPEN_R_WORK, FOPEN_W_WORK, FOPEN_WPLUS_WORK): Use enum.
	(KEYVAL_EXPAND, KEYVALLOCK_EXPAND, KEY_EXPAND, VAL_EXPAND)
	(OLD_EXPAND, BINARY_EXPAND): Delete #define:s.
	(MIN_UNEXPAND, MIN_UNCHANGED_EXPAND): Use enum.
	* ci.c (main) [OPEN_O_BINARY]: Use enum.
	(main): Likewise.
	* co.c (main) [OPEN_O_BINARY]: Likewise.
	(main): Likewise.
	* rcs.c (buildeltatext) [OPEN_O_BINARY]: Likewise.
	* rcsclean.c (main): Likewise.
	* rcsdiff.c (main): Likewise.
	(main) [OPEN_O_BINARY]: Likewise.
	* rcsedit.c (keyreplace): Likewise.
	* rcsfnms.c (InitAdmin): Likewise.
	* rcsgen.c (putadmin): Likewise.
	* rcsmerge.c (main): Likewise.
	* rcssyn.c (getadmin): Likewise.
	* rlog.c (main): Likewise.

2010-03-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Don't bother taking unused third arg for `same_file'.

	* rcsbase.h (same_file): Don't take third arg.
	* ci.c (main): Call `same_file' w/o third arg.
	* co.c (main): Likewise.
	* rcsclean.c (main): Likewise.
	* rcsedit.c (chnamemod): Likewise.
	* rcsfnms.c (getfullRCSname): Likewise.

2010-03-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Topo-sort top-level; eliminate redundant forward func decls.

	* maketime.c: Delete forward func decls; reorder
	top-level; do other whitespace and comment changes.
	* merger.c: Likewise.
	* partime.c: Likewise.
	* rcsedit.c: Likewise.
	* rcsfcmp.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcskeep.c: Likewise.
	* rcskeys.c: Likewise.
	* rcslex.c: Likewise.
	* rcsmap.c: Likewise.
	* rcsrev.c: Likewise.
	* rcssyn.c: Likewise.
	* rcstime.c: Likewise.
	* rcsutil.c: Likewise.

2010-03-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Remove spurious debugging output.

	* rcsfnms.c [!HAVE_MKSTEMP] (homegrown_mkstemp):
	Remove debugging output.

2010-03-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Revise output for --help option.
